fix: alignment and distance

--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -101,7 +101,7 @@
 .main-menu-buttons {
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    gap: 0.25rem;
     cursor: pointer;
 }
 
